--- a/startrak-ui/ui/main_layout.ui
+++ b/startrak-ui/ui/main_layout.ui
@@ -598,6 +598,9 @@ color: rgb(212, 212, 212);</string>
                <property name="frameShape">
                 <enum>QFrame::NoFrame</enum>
                </property>
+               <attribute name="headerDefaultSectionSize">
+                <number>300</number>
+               </attribute>
               </widget>
              </item>
             </layout>
