--- a/startrak-ui/ui/main_layout.ui
+++ b/startrak-ui/ui/main_layout.ui
@@ -729,6 +729,34 @@ color: rgb(212, 212, 212);</string>
              <height>672</height>
             </rect>
            </property>
+           <widget class="QLabel" name="label_info">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>0</y>
+              <width>231</width>
+              <height>471</height>
+             </rect>
+            </property>
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>TextLabel</string>
+            </property>
+            <property name="scaledContents">
+             <bool>true</bool>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+            </property>
+            <property name="margin">
+             <number>4</number>
+            </property>
+           </widget>
           </widget>
          </widget>
         </item>
@@ -754,7 +782,8 @@ color: rgb(212, 212, 212);</string>
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionNew"/>
+    <addaction name="action_new"/>
+    <addaction name="action_open"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
@@ -770,9 +799,14 @@ color: rgb(212, 212, 212);</string>
     <bool>false</bool>
    </attribute>
   </widget>
-  <action name="actionNew">
+  <action name="action_new">
    <property name="text">
-    <string>New</string>
+    <string>New Session</string>
+   </property>
+  </action>
+  <action name="action_open">
+   <property name="text">
+    <string>Open Session</string>
    </property>
   </action>
  </widget>
