--- a/startrak-ui/qt/layouts/main_layout.ui
+++ b/startrak-ui/qt/layouts/main_layout.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1211</width>
-    <height>773</height>
+    <width>1382</width>
+    <height>907</height>
    </rect>
   </property>
   <property name="palette">
@@ -530,13 +530,13 @@ color: rgb(212, 212, 212);</string>
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>128</height>
+          <height>256</height>
          </size>
         </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <widget class="QFrame" name="frame_3">
+        <widget class="QFrame" name="left_panel">
          <property name="styleSheet">
           <string notr="true">background-color: rgb(28, 28, 28);</string>
          </property>
@@ -554,7 +554,7 @@ color: rgb(212, 212, 212);</string>
            <number>0</number>
           </property>
           <item>
-           <widget class="QLabel" name="label_3">
+           <widget class="QLabel" name="header_l">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
               <horstretch>0</horstretch>
@@ -573,7 +573,7 @@ color: rgb(212, 212, 212);</string>
            </widget>
           </item>
           <item>
-           <widget class="QFrame" name="frame_4">
+           <widget class="QFrame" name="content_l">
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
             </property>
@@ -593,22 +593,12 @@ color: rgb(212, 212, 212);</string>
              <property name="bottomMargin">
               <number>0</number>
              </property>
-             <item row="0" column="0">
-              <widget class="QTreeView" name="session_view">
-               <property name="frameShape">
-                <enum>QFrame::NoFrame</enum>
-               </property>
-               <attribute name="headerDefaultSectionSize">
-                <number>300</number>
-               </attribute>
-              </widget>
-             </item>
             </layout>
            </widget>
           </item>
          </layout>
         </widget>
-        <widget class="QFrame" name="frame_6">
+        <widget class="QFrame" name="right_panel">
          <property name="styleSheet">
           <string notr="true">background-color: rgb(28, 28, 28)</string>
          </property>
@@ -626,7 +616,7 @@ color: rgb(212, 212, 212);</string>
            <number>0</number>
           </property>
           <item>
-           <widget class="QLabel" name="label_2">
+           <widget class="QLabel" name="header_r">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
               <horstretch>0</horstretch>
@@ -645,7 +635,7 @@ color: rgb(212, 212, 212);</string>
            </widget>
           </item>
           <item>
-           <widget class="QFrame" name="frame_2">
+           <widget class="QFrame" name="content_r">
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
             </property>
@@ -726,7 +716,7 @@ color: rgb(212, 212, 212);</string>
              <x>0</x>
              <y>0</y>
              <width>254</width>
-             <height>672</height>
+             <height>806</height>
             </rect>
            </property>
            <widget class="QLabel" name="label_info">
@@ -771,7 +761,7 @@ color: rgb(212, 212, 212);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1211</width>
+     <width>1382</width>
      <height>22</height>
     </rect>
    </property>
@@ -792,6 +782,15 @@ color: rgb(212, 212, 212);</string>
    <property name="windowTitle">
     <string>toolBar</string>
    </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::TopToolBarArea</set>
+   </property>
+   <property name="floatable">
+    <bool>false</bool>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
@@ -811,5 +810,26 @@ color: rgb(212, 212, 212);</string>
   </action>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>menubar</sender>
+   <signal>triggered(QAction*)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>menubar_call()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>77</x>
+     <y>8</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-5</x>
+     <y>92</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>menubar_call()</slot>
+  <slot>menubar_call(str)</slot>
+ </slots>
 </ui>
