Added custom Inspector for different STObjects including Any:
A metaclass was created to bridge the interaction between regular python types and QT's Shiboken types

--- a/startrak-ui/qt/layouts/main_layout.ui
+++ b/startrak-ui/qt/layouts/main_layout.ui
@@ -674,9 +674,6 @@ color: rgb(212, 212, 212);</string>
         <enum>QFrame::NoFrame</enum>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
         <property name="topMargin">
          <number>0</number>
         </property>
@@ -686,7 +683,7 @@ color: rgb(212, 212, 212);</string>
         <property name="bottomMargin">
          <number>0</number>
         </property>
-        <item>
+        <item alignment="Qt::AlignTop">
          <widget class="QLabel" name="label">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
@@ -703,51 +700,6 @@ color: rgb(212, 212, 212);</string>
           <property name="margin">
            <number>2</number>
           </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QScrollArea" name="scrollArea">
-          <property name="widgetResizable">
-           <bool>true</bool>
-          </property>
-          <widget class="QWidget" name="scrollAreaWidgetContents">
-           <property name="geometry">
-            <rect>
-             <x>0</x>
-             <y>0</y>
-             <width>254</width>
-             <height>806</height>
-            </rect>
-           </property>
-           <widget class="QLabel" name="label_info">
-            <property name="geometry">
-             <rect>
-              <x>10</x>
-              <y>0</y>
-              <width>231</width>
-              <height>471</height>
-             </rect>
-            </property>
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="text">
-             <string>TextLabel</string>
-            </property>
-            <property name="scaledContents">
-             <bool>true</bool>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-            </property>
-            <property name="margin">
-             <number>4</number>
-            </property>
-           </widget>
-          </widget>
          </widget>
         </item>
        </layout>
