--- a/startrak-ui/qt/layouts/insp_undef.ui
+++ b/startrak-ui/qt/layouts/insp_undef.ui
@@ -52,10 +52,13 @@
         <property name="text">
          <string>Object Type</string>
         </property>
+        <property name="buddy">
+         <cstring>nameField</cstring>
+        </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit">
+       <widget class="QLineEdit" name="nameField">
         <property name="readOnly">
          <bool>true</bool>
         </property>
@@ -75,10 +78,13 @@
      <property name="text">
       <string>Contents:</string>
      </property>
+     <property name="buddy">
+      <cstring>contentField</cstring>
+     </property>
     </widget>
    </item>
    <item>
-    <widget class="QTextEdit" name="textEdit">
+    <widget class="QTextEdit" name="contentField">
      <property name="readOnly">
       <bool>true</bool>
      </property>
