--- a/startrak-ui/qt/layouts/insp_undef.ui
+++ b/startrak-ui/qt/layouts/insp_undef.ui
@@ -32,10 +32,10 @@
       </sizepolicy>
      </property>
      <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
+      <enum>QFrame::NoFrame</enum>
      </property>
      <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
+      <enum>QFrame::Plain</enum>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <property name="leftMargin">
@@ -49,6 +49,9 @@
       </property>
       <item>
        <widget class="QLabel" name="label">
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
         <property name="text">
          <string>Object Type</string>
         </property>
@@ -59,6 +62,9 @@
       </item>
       <item>
        <widget class="QLineEdit" name="nameField">
+        <property name="styleSheet">
+         <string notr="true">font-size: 12pt;</string>
+        </property>
         <property name="readOnly">
          <bool>true</bool>
         </property>
@@ -68,23 +74,17 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label_2">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Contents:</string>
-     </property>
-     <property name="buddy">
-      <cstring>contentField</cstring>
-     </property>
-    </widget>
-   </item>
-   <item>
     <widget class="QTextEdit" name="contentField">
+     <property name="styleSheet">
+      <string notr="true">font-size: 10pt;
+</string>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="lineWrapMode">
+      <enum>QTextEdit::NoWrap</enum>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
