--- a/startrak-ui/qt/layouts/insp_star.ui
+++ b/startrak-ui/qt/layouts/insp_star.ui
@@ -6,12 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>216</width>
+    <width>221</width>
     <height>671</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Frame</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">
+QFrame[objectName ^= &quot;frame&quot; ]{
+
+	background-color: rgba(255, 255, 255, 20);
+}
+
+</string>
   </property>
   <property name="frameShape">
    <enum>QFrame::NoFrame</enum>
@@ -29,6 +38,13 @@
    <property name="bottomMargin">
     <number>0</number>
    </property>
+   <item>
+    <widget class="QLabel" name="label_8">
+     <property name="text">
+      <string>Star</string>
+     </property>
+    </widget>
+   </item>
    <item>
     <widget class="QSplitter" name="splitter">
      <property name="orientation">
@@ -51,10 +67,10 @@
        <string notr="true">background-color: rgb(28, 28, 28);</string>
       </property>
       <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
+       <enum>QFrame::NoFrame</enum>
       </property>
       <property name="frameShadow">
-       <enum>QFrame::Raised</enum>
+       <enum>QFrame::Plain</enum>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
@@ -107,6 +123,18 @@
        </property>
        <item>
         <widget class="QFrame" name="form">
+         <property name="styleSheet">
+          <string notr="true">QFrame[objectName ^= &quot;form&quot; ]{
+
+	background-color: rgba(255, 255, 255, 20);
+}
+QLabel{
+
+	background-color: rgba(255, 255, 255, 0);
+}
+
+</string>
+         </property>
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
          </property>
@@ -244,6 +272,9 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
             <property name="text">
              <string>Trackable</string>
             </property>
@@ -251,6 +282,19 @@
           </item>
          </layout>
         </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
        </item>
        <item>
         <widget class="QLabel" name="label_phot">
