--- a/startrak-ui/qt/layouts/insp_star.ui
+++ b/startrak-ui/qt/layouts/insp_star.ui
@@ -14,13 +14,7 @@
    <string>Frame</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">
-QFrame[objectName ^= &quot;frame&quot; ]{
-
-	background-color: rgba(255, 255, 255, 20);
-}
-
-</string>
+   <string notr="true"/>
   </property>
   <property name="frameShape">
    <enum>QFrame::NoFrame</enum>
@@ -124,10 +118,12 @@ QFrame[objectName ^= &quot;frame&quot; ]{
        <item>
         <widget class="QFrame" name="form">
          <property name="styleSheet">
-          <string notr="true">QFrame[objectName ^= &quot;form&quot; ]{
+          <string notr="true">
+QFrame[objectName ^= &quot;form&quot; ]{
 
 	background-color: rgba(255, 255, 255, 20);
 }
+QCheckBox,
 QLabel{
 
 	background-color: rgba(255, 255, 255, 0);
