--- a/startrak-ui/qt/layouts/insp_phot.ui
+++ b/startrak-ui/qt/layouts/insp_phot.ui
@@ -36,6 +36,12 @@ QLabel{
    </property>
    <item>
     <widget class="QLabel" name="label_5">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>Photometry Result</string>
      </property>
