--- a/startrak-ui/qt/layouts/insp_undef.ui
+++ b/startrak-ui/qt/layouts/insp_undef.ui
@@ -28,6 +28,12 @@
    </property>
    <item>
     <widget class="QLabel" name="nameField">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>Object Type</string>
      </property>
