--- a/startrak-ui/qt/layouts/main_layout.ui
+++ b/startrak-ui/qt/layouts/main_layout.ui
@@ -76,9 +76,6 @@
          <enum>Qt::Horizontal</enum>
         </property>
         <widget class="QFrame" name="left_panel">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(28, 28, 28);</string>
-         </property>
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <property name="leftMargin">
            <number>0</number>
@@ -93,15 +90,12 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QLabel" name="header_l">
+           <widget class="QLabel" name="session_title">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(26, 26, 26)</string>
             </property>
             <property name="text">
              <string>Session</string>
@@ -138,9 +132,6 @@
          </layout>
         </widget>
         <widget class="QFrame" name="right_panel">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(28, 28, 28)</string>
-         </property>
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <property name="leftMargin">
            <number>0</number>
@@ -155,15 +146,12 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QLabel" name="header_r">
+           <widget class="QLabel" name="console_title">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(26, 26, 26)</string>
             </property>
             <property name="text">
              <string>Console</string>
@@ -206,9 +194,6 @@
          <height>0</height>
         </size>
        </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(28, 28, 28);</string>
-       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -226,15 +211,12 @@
          <number>0</number>
         </property>
         <item alignment="Qt::AlignTop">
-         <widget class="QLabel" name="label">
+         <widget class="QLabel" name="inspector_title">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">background-color: rgb(26, 26, 26)</string>
           </property>
           <property name="text">
            <string>Inspector</string>
