--- a/startrak-ui/qt/layouts/main_layout.ui
+++ b/startrak-ui/qt/layouts/main_layout.ui
@@ -55,15 +55,45 @@
           <height>256</height>
          </size>
         </property>
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(0, 0, 0)</string>
-        </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
+        <layout class="QVBoxLayout" name="verticalLayout_7">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="viewer_title">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Viewer</string>
+           </property>
+           <property name="margin">
+            <number>2</number>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
        <widget class="QSplitter" name="splitter_subh">
         <property name="minimumSize">
@@ -106,7 +136,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QFrame" name="content_l">
+           <widget class="QFrame" name="content_left">
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
             </property>
@@ -162,7 +192,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QFrame" name="content_r">
+           <widget class="QFrame" name="content_right">
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
             </property>
