Changed Collection insepctor to a QListWidget based view

--- a/startrak-ui/qt/layouts/insp_collection.ui
+++ b/startrak-ui/qt/layouts/insp_collection.ui
@@ -47,21 +47,16 @@
     </widget>
    </item>
    <item>
-    <widget class="QScrollArea" name="scrollArea">
-     <property name="widgetResizable">
-      <bool>true</bool>
+    <widget class="QListWidget" name="listWidget">
+     <property name="verticalScrollMode">
+      <enum>QAbstractItemView::ScrollPerPixel</enum>
      </property>
-     <widget class="QWidget" name="scrollAreaWidgetContents">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>325</width>
-        <height>736</height>
-       </rect>
-      </property>
-      <layout class="QVBoxLayout" name="verticalLayout_3"/>
-     </widget>
+     <property name="movement">
+      <enum>QListView::Free</enum>
+     </property>
+     <property name="layoutMode">
+      <enum>QListView::Batched</enum>
+     </property>
     </widget>
    </item>
    <item>
